--- a/phozogy-master/css/style.css
+++ b/phozogy-master/css/style.css
@@ -1,12 +1,3 @@
-/******************************************************************
-  Template Name: Phozogy
-  Description:  Phozogy photography HTML Template
-  Author: Colorlib
-  Author URI: https://colorlib.com
-  Version: 1.0
-  Created: Colorlib
-******************************************************************/
-
 /*------------------------------------------------------------------
 [Table of contents]
 
@@ -343,6 +334,7 @@ ol {
   display: inline-block;
   margin-right: 30px;
   position: relative;
+	margin-top: 9%;
 }
 
 .nav-menu ul li:last-child {
@@ -364,7 +356,7 @@ ol {
 }
 
 .nav-menu ul li a {
-  font-size: 26px;
+  font-size: 20px;
   font-weight: 700;
   text-transform: uppercase;
   color: #111111;
@@ -429,6 +421,7 @@ ol {
   cursor: pointer;
   float: right;
   margin: 19px 0 16px;
+	margin-top: 60px;
 }
 
 .slicknav_menu {
@@ -1246,148 +1239,7 @@ ol {
   margin-bottom: 0;
 }
 
-/*---------------------
-  Pricing Section
------------------------*/
 
-.pricing-section {
-  padding-bottom: 35px;
-  padding-top: 0;
-}
-
-.section-title.pricing-title {
-  margin-bottom: 110px;
-}
-
-.pricing-item {
-  position: relative;
-  background: #ffffff;
-  z-index: 1;
-  text-align: center;
-  padding-bottom: 20px;
-  -webkit-box-shadow: 0px 0px 25px rgba(206, 206, 206, 0.5);
-  box-shadow: 0px 0px 25px rgba(206, 206, 206, 0.5);
-  margin-bottom: 110px;
-}
-
-.pricing-item:after {
-  position: absolute;
-  left: 50%;
-  top: -73px;
-  height: 73px;
-  width: 150px;
-  background: #ffffff;
-  content: "";
-  border-top-left-radius: 75px;
-  border-top-right-radius: 75px;
-  z-index: -1;
-  -webkit-transform: translateX(-75px);
-  -ms-transform: translateX(-75px);
-  transform: translateX(-75px);
-  -webkit-box-shadow: 0px -8px 25px -8px rgba(206, 206, 206, 0.5);
-  box-shadow: 0px -8px 25px -8px rgba(206, 206, 206, 0.5);
-  -webkit-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.pricing-item:hover:after {
-  background: #009603;
-}
-
-.pricing-item:hover .pi-price h2 {
-  color: #ffffff;
-}
-
-.pricing-item:hover .pi-price span {
-  color: #ffffff;
-}
-
-.pricing-item:hover .pi-title {
-  background: #009603;
-}
-
-.pricing-item:hover .pi-title h3 {
-  color: #ffffff;
-  border-bottom: 1px solid transparent;
-}
-
-.pricing-item:hover .pi-text .primary-btn {
-  background: #009603;
-  color: #ffffff;
-}
-
-.pricing-item .pi-price {
-  position: absolute;
-  top: -32px;
-  width: 100%;
-  left: 0;
-}
-
-.pricing-item .pi-price h2 {
-  color: #009603;
-  font-weight: 700;
-  -webkit-transition: all 0.2s;
-  -o-transition: all 0.2s;
-  transition: all 0.2s;
-}
-
-.pricing-item .pi-price span {
-  font-size: 15px;
-  color: #111111;
-  -webkit-transition: all 0.2s;
-  -o-transition: all 0.2s;
-  transition: all 0.2s;
-}
-
-.pricing-item .pi-title {
-  padding-top: 65px;
-  padding-left: 20px;
-  padding-right: 20px;
-  -webkit-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.pricing-item .pi-title h3 {
-  color: #111111;
-  font-weight: 700;
-  padding-bottom: 32px;
-  text-transform: uppercase;
-  border-bottom: 1px solid #ebebeb;
-  -webkit-transition: all 0.2s;
-  -o-transition: all 0.2s;
-  transition: all 0.2s;
-}
-
-.pricing-item .pi-text {
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.pricing-item .pi-text ul {
-  margin: 25px 0;
-}
-
-.pricing-item .pi-text ul li {
-  font-size: 15px;
-  color: #666666;
-  line-height: 42px;
-  list-style: none;
-}
-
-.pricing-item .pi-text .primary-btn {
-  font-size: 15px;
-  color: #111111;
-  background: #ebebeb;
-  padding: 14px 0;
-  display: block;
-  -webkit-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-/*---------------------
   Portfolio Hero
 -----------------------*/
 
@@ -1537,703 +1389,6 @@ ol {
   font-weight: 600;
   color: #009603;
   display: block;
-}
-
-/*---------------------
-  Blog
------------------------*/
-
-.blog-section {
-  padding-top: 0;
-}
-
-.blog-item {
-  margin-bottom: 50px;
-  overflow: hidden;
-}
-
-.blog-item .bi-pic {
-  float: left;
-  margin-right: 30px;
-}
-
-.blog-item .bi-text {
-  overflow: hidden;
-}
-
-.blog-item .bi-text .label {
-  font-size: 12px;
-  color: #ffffff;
-  font-weight: 600;
-  display: inline-block;
-  background: #009603;
-  padding: 2px 12px;
-  text-transform: uppercase;
-}
-
-.blog-item .bi-text h5 {
-  margin-top: 20px;
-  margin-bottom: 10px;
-}
-
-.blog-item .bi-text h5 a {
-  font-size: 20px;
-  color: #111111;
-  font-weight: 700;
-  line-height: 27px;
-  text-transform: uppercase;
-}
-
-.blog-item .bi-text ul {
-  margin-bottom: 14px;
-}
-
-.blog-item .bi-text ul li {
-  font-size: 13px;
-  color: #888888;
-  display: inline-block;
-  list-style: none;
-  margin-right: 24px;
-  position: relative;
-}
-
-.blog-item .bi-text ul li:after {
-  position: absolute;
-  right: -17px;
-  top: -1px;
-  content: "|";
-}
-
-.blog-item .bi-text ul li:last-child {
-  margin-right: 0;
-}
-
-.blog-item .bi-text ul li:last-child:after {
-  display: none;
-}
-
-.blog-item .bi-text ul li span {
-  color: #111111;
-}
-
-.blog-item .bi-text p {
-  color: #444444;
-  line-height: 30px;
-  letter-spacing: 0.5px;
-  margin-bottom: 0;
-}
-
-.blog-pagination a {
-  display: inline-block;
-  font-size: 20px;
-  font-weight: 600;
-  background: #f2f2f2;
-  color: #111111;
-  padding: 12px 22px;
-  margin-right: 8px;
-  -webkit-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.blog-pagination a:hover {
-  color: #ffffff;
-  background: #111111;
-}
-
-.blog-pagination a:last-child {
-  margin-right: 0;
-}
-
-.blog-sidebar .bs-item.s-mb {
-  margin-bottom: 55px;
-}
-
-.blog-sidebar .bs-item h5 {
-  font-size: 20px;
-  font-weight: 700;
-  color: #111111;
-  text-transform: uppercase;
-  position: relative;
-  margin-bottom: 35px;
-}
-
-.blog-sidebar .bs-item h5:after {
-  position: absolute;
-  right: 0;
-  top: 10px;
-  height: 3px;
-  width: 95px;
-  background: #e1e1e1;
-  content: "";
-}
-
-.blog-sidebar .bs-item .bi-feature-post .fp-item {
-  overflow: hidden;
-  margin-bottom: 30px;
-  display: block;
-}
-
-.blog-sidebar .bs-item .bi-feature-post .fp-item .fp-pic {
-  float: left;
-  margin-right: 20px;
-}
-
-.blog-sidebar .bs-item .bi-feature-post .fp-item .fp-text {
-  overflow: hidden;
-}
-
-.blog-sidebar .bs-item .bi-feature-post .fp-item .fp-text h6 {
-  font-size: 15px;
-  color: #111111;
-  font-weight: 700;
-  text-transform: uppercase;
-  line-height: 20px;
-}
-
-.blog-sidebar .bs-item .bi-feature-post .fp-item .fp-text span {
-  font-size: 13px;
-  color: #888888;
-}
-
-.blog-sidebar .bs-item p {
-  color: #444444;
-  font-weight: 500;
-}
-
-.blog-sidebar .bs-item .bi-subscribe form input {
-  font-size: 13px;
-  color: #444444;
-  height: 46px;
-  width: 100%;
-  border: 1px solid #d7d7d7;
-  padding-left: 15px;
-  background: transparent;
-  margin-bottom: 20px;
-}
-
-.blog-sidebar .bs-item .bi-subscribe form input::-webkit-input-placeholder {
-  color: #444444;
-}
-
-.blog-sidebar .bs-item .bi-subscribe form input::-moz-placeholder {
-  color: #444444;
-}
-
-.blog-sidebar .bs-item .bi-subscribe form input:-ms-input-placeholder {
-  color: #444444;
-}
-
-.blog-sidebar .bs-item .bi-subscribe form input::-ms-input-placeholder {
-  color: #444444;
-}
-
-.blog-sidebar .bs-item .bi-subscribe form input::placeholder {
-  color: #444444;
-}
-
-.blog-sidebar .bs-item .bi-subscribe form .site-btn {
-  width: 100%;
-}
-
-.blog-sidebar .bs-item .bi-insta {
-  margin-right: -10px;
-  overflow: hidden;
-}
-
-.blog-sidebar .bs-item .bi-insta img {
-  width: calc(50% - 10px);
-  float: left;
-  margin-right: 10px;
-  margin-bottom: 10px;
-}
-
-/*---------------------
-  Blog Details Section
------------------------*/
-
-.blog-hero {
-  height: 960px;
-}
-
-.blog-details-section {
-  padding-top: 0;
-  padding-bottom: 60px;
-}
-
-.blog-details-text {
-  background: #ffffff;
-  padding-top: 60px;
-  padding-left: 55px;
-  padding-right: 55px;
-  margin-top: -240px;
-}
-
-.blog-details-text .bd-title {
-  margin-bottom: 60px;
-}
-
-.blog-details-text .bd-title .bt-bread {
-  margin-bottom: 12px;
-}
-
-.blog-details-text .bd-title .bt-bread a {
-  font-size: 15px;
-  color: #111111;
-  margin-right: 20px;
-  position: relative;
-}
-
-.blog-details-text .bd-title .bt-bread a i {
-  margin-right: 5px;
-}
-
-.blog-details-text .bd-title .bt-bread a:after {
-  position: absolute;
-  right: -18px;
-  top: 1px;
-  content: "5";
-  font-family: "ElegantIcons";
-}
-
-.blog-details-text .bd-title .bt-bread span {
-  font-size: 15px;
-  color: #888888;
-}
-
-.blog-details-text .bd-title h2 {
-  font-size: 42px;
-  color: #111111;
-  font-weight: 700;
-  line-height: 55px;
-  margin-bottom: 18px;
-}
-
-.blog-details-text .bd-title ul li {
-  font-size: 13px;
-  color: #888888;
-  display: inline-block;
-  list-style: none;
-  margin-right: 24px;
-  position: relative;
-}
-
-.blog-details-text .bd-title ul li:after {
-  position: absolute;
-  right: -17px;
-  top: -1px;
-  content: "|";
-}
-
-.blog-details-text .bd-title ul li:last-child {
-  margin-right: 0;
-}
-
-.blog-details-text .bd-title ul li:last-child:after {
-  display: none;
-}
-
-.blog-details-text .bd-title ul li span {
-  color: #111111;
-}
-
-.blog-details-text .bd-top-text {
-  margin-bottom: 50px;
-}
-
-.blog-details-text .bd-top-text p {
-  font-size: 17px;
-  color: #444444;
-  line-height: 30px;
-}
-
-.blog-details-text .bd-quote {
-  border-top: 10px solid #f2f2f2;
-  position: relative;
-  margin-bottom: 35px;
-}
-
-.blog-details-text .bd-quote:after {
-  position: absolute;
-  left: 0;
-  top: -20px;
-  background-image: url(../img/blog/details/quote.png);
-  height: 22px;
-  width: 45px;
-  background-repeat: no-repeat;
-  background-color: #ffffff;
-  content: "";
-}
-
-.blog-details-text .bd-quote p {
-  font-size: 20px;
-  color: #111111;
-  line-height: 35px;
-  font-weight: 600;
-  font-style: italic;
-  padding-top: 24px;
-}
-
-.blog-details-text .bd-desc {
-  margin-bottom: 40px;
-}
-
-.blog-details-text .bd-desc p {
-  font-size: 17px;
-  color: #444444;
-  line-height: 30px;
-}
-
-.blog-details-text .bd-pics {
-  margin-right: -10px;
-  overflow: hidden;
-  margin-bottom: 34px;
-}
-
-.blog-details-text .bd-pics img {
-  width: calc(33.33% - 10px);
-  float: left;
-  margin-right: 10px;
-  margin-bottom: 10px;
-}
-
-.blog-details-text .bd-last-desc {
-  margin-bottom: 40px;
-}
-
-.blog-details-text .bd-last-desc p {
-  font-size: 17px;
-  color: #444444;
-  line-height: 30px;
-}
-
-.blog-details-text .bd-tag-share {
-  overflow: hidden;
-  padding-top: 35px;
-  border-top: 1px solid #ebebeb;
-  margin-bottom: 50px;
-}
-
-.blog-details-text .bd-tag-share .tags {
-  float: left;
-}
-
-.blog-details-text .bd-tag-share .tags a {
-  font-size: 13px;
-  display: inline-block;
-  color: #444444;
-  text-transform: uppercase;
-  padding: 8px 14px;
-  background: #ebebeb;
-  margin-right: 9px;
-}
-
-.blog-details-text .bd-tag-share .tags a:last-child {
-  margin-right: 0;
-}
-
-.blog-details-text .bd-tag-share .share {
-  float: right;
-}
-
-.blog-details-text .bd-tag-share .share span {
-  display: inline-block;
-  font-size: 15px;
-  text-transform: uppercase;
-  font-weight: 600;
-  color: #111111;
-  margin-right: 20px;
-}
-
-.blog-details-text .bd-tag-share .share a {
-  display: inline-block;
-  font-size: 14px;
-  color: #ffffff;
-  width: 46px;
-  height: 46px;
-  line-height: 46px;
-  text-align: center;
-  margin-left: 6px;
-}
-
-.blog-details-text .bd-tag-share .share a.facebook {
-  background: #3263af;
-}
-
-.blog-details-text .bd-tag-share .share a.twitter {
-  background: #40c4ff;
-}
-
-.blog-details-text .bd-tag-share .share a.youtube {
-  background: #ff0000;
-}
-
-.blog-details-text .bd-tag-share .share a.instagram {
-  background: -o-linear-gradient(45deg, #af00e1, #ff9e35);
-  background: linear-gradient(45deg, #af00e1, #ff9e35);
-}
-
-.blog-details-text .bd-related-post {
-  margin-bottom: 60px;
-}
-
-.blog-details-text .bd-related-post .post-item {
-  display: block;
-  overflow: hidden;
-}
-
-.blog-details-text .bd-related-post .post-item.prev-item .pi-pic {
-  float: left;
-  margin-right: 30px;
-}
-
-.blog-details-text .bd-related-post .post-item.prev-item .pi-text {
-  overflow: hidden;
-}
-
-.blog-details-text .bd-related-post .post-item.next-item {
-  text-align: right;
-}
-
-.blog-details-text .bd-related-post .post-item.next-item .pi-pic {
-  float: right;
-  margin-left: 30px;
-}
-
-.blog-details-text .bd-related-post .post-item.next-item .pi-text {
-  overflow: hidden;
-}
-
-.blog-details-text .bd-related-post .post-item h6 {
-  font-size: 15px;
-  color: #111111;
-  text-transform: uppercase;
-  font-weight: 700;
-  margin-bottom: 25px;
-}
-
-.blog-details-text .bd-related-post .post-item h6 span {
-  font-size: 22px;
-  position: relative;
-  top: 3px;
-}
-
-.blog-details-text .bd-related-post .post-item .pi-text .label {
-  font-size: 12px;
-  color: #ffffff;
-  font-weight: 600;
-  display: inline-block;
-  background: #009603;
-  padding: 2px 12px;
-  text-transform: uppercase;
-}
-
-.blog-details-text .bd-related-post .post-item .pi-text h5 {
-  font-size: 20px;
-  color: #111111;
-  font-weight: 700;
-  line-height: 23px;
-  letter-spacing: 0.5px;
-  margin-top: 10px;
-}
-
-.blog-details-text .bd-author {
-  background: #f5f5f5;
-  padding: 50px;
-  margin-bottom: 60px;
-}
-
-.blog-details-text .bd-author .avatar-pic {
-  float: left;
-  margin-right: 30px;
-}
-
-.blog-details-text .bd-author .avatar-pic img {
-  height: 130px;
-  width: 130px;
-  border-radius: 50%;
-}
-
-.blog-details-text .bd-author .avatar-text {
-  overflow: hidden;
-}
-
-.blog-details-text .bd-author .avatar-text h4 {
-  color: #111111;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-bottom: 8px;
-}
-
-.blog-details-text .bd-author .avatar-text p {
-  color: #444444;
-  font-size: 17px;
-  line-height: 30px;
-}
-
-.blog-details-text .bd-author .avatar-text .at-social a {
-  font-size: 14px;
-  display: inline-block;
-  color: #444444;
-  margin-right: 15px;
-}
-
-.blog-details-text .bd-author .avatar-text .at-social a:last-child {
-  margin-right: 0;
-}
-
-.blog-details-text .bd-comment-form h4 {
-  color: #111111;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-bottom: 35px;
-}
-
-.blog-details-text .bd-comment-form .comment-item {
-  margin-bottom: 35px;
-}
-
-.blog-details-text .bd-comment-form .comment-item .ci-pic {
-  float: left;
-  margin-right: 20px;
-}
-
-.blog-details-text .bd-comment-form .comment-item .ci-pic img {
-  height: 70px;
-  width: 70px;
-  border-radius: 50%;
-}
-
-.blog-details-text .bd-comment-form .comment-item .ci-text {
-  overflow: hidden;
-}
-
-.blog-details-text .bd-comment-form .comment-item .ci-text h5 {
-  font-size: 20px;
-  color: #111111;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-right: 8px;
-}
-
-.blog-details-text .bd-comment-form .comment-item .ci-text p {
-  color: #444444;
-  margin-bottom: 10px;
-}
-
-.blog-details-text .bd-comment-form .comment-item .ci-text ul li {
-  list-style: none;
-  display: inline-block;
-  font-size: 12px;
-  color: #444444;
-  margin-right: 25px;
-}
-
-.blog-details-text .bd-comment-form .comment-item .ci-text ul li:last-child {
-  margin-right: 0;
-}
-
-.blog-details-text .bd-comment-form .comment-item .ci-text ul li i {
-  font-size: 14px;
-  color: #009603;
-  margin-right: 5px;
-}
-
-.blog-details-text .bd-comment-form .leave-form {
-  padding: 35px 40px 40px 40px;
-  border: 1px solid #e1e1e1;
-}
-
-.blog-details-text .bd-comment-form .leave-form form input {
-  height: 50px;
-  width: 100%;
-  padding-left: 20px;
-  font-size: 14px;
-  color: #444444;
-  background: #f2f2f2;
-  margin-bottom: 20px;
-  border: none;
-}
-
-.blog-details-text
-  .bd-comment-form
-  .leave-form
-  form
-  input::-webkit-input-placeholder {
-  color: #444444;
-}
-
-.blog-details-text .bd-comment-form .leave-form form input::-moz-placeholder {
-  color: #444444;
-}
-
-.blog-details-text
-  .bd-comment-form
-  .leave-form
-  form
-  input:-ms-input-placeholder {
-  color: #444444;
-}
-
-.blog-details-text
-  .bd-comment-form
-  .leave-form
-  form
-  input::-ms-input-placeholder {
-  color: #444444;
-}
-
-.blog-details-text .bd-comment-form .leave-form form input::placeholder {
-  color: #444444;
-}
-
-.blog-details-text .bd-comment-form .leave-form form textarea {
-  width: 100%;
-  padding-left: 20px;
-  padding-top: 12px;
-  height: 100px;
-  font-size: 14px;
-  color: #444444;
-  background: #f2f2f2;
-  resize: none;
-  border: none;
-  margin-bottom: 14px;
-}
-
-.blog-details-text
-  .bd-comment-form
-  .leave-form
-  form
-  textarea::-webkit-input-placeholder {
-  color: #444444;
-}
-
-.blog-details-text
-  .bd-comment-form
-  .leave-form
-  form
-  textarea::-moz-placeholder {
-  color: #444444;
-}
-
-.blog-details-text
-  .bd-comment-form
-  .leave-form
-  form
-  textarea:-ms-input-placeholder {
-  color: #444444;
-}
-
-.blog-details-text
-  .bd-comment-form
-  .leave-form
-  form
-  textarea::-ms-input-placeholder {
-  color: #444444;
-}
-
-.blog-details-text .bd-comment-form .leave-form form textarea::placeholder {
-  color: #444444;
 }
 
 /*---------------------
@@ -2910,17 +2065,4 @@ ol {
     margin-right: 0;
     margin-bottom: 25px;
   }
-  .blog-hero {
-    height: 450px;
-  }
-  .blog-details-text .bd-pics img {
-    width: 100%;
-    float: left;
-    margin-right: 0;
-    margin-bottom: 15px;
-  }
-  .blog-details-text .bd-title h2 {
-    font-size: 36px;
-    line-height: normal;
-  }
-}
+ 
