--- a/phozogy-master/css/style.css
+++ b/phozogy-master/css/style.css
@@ -255,57 +255,6 @@ ol {
   text-align: center;
   cursor: pointer;
 }
-
-.search-model {
-  display: none;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  background: #000;
-  z-index: 99999;
-}
-
-.search-model-form {
-  padding: 0 15px;
-}
-
-.search-model-form input {
-  width: 500px;
-  font-size: 40px;
-  border: none;
-  border-bottom: 2px solid #333;
-  background: none;
-  color: #999;
-}
-
-.search-close-switch {
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  background: #333;
-  color: #fff;
-  text-align: center;
-  border-radius: 50%;
-  font-size: 28px;
-  line-height: 28px;
-  top: 30px;
-  cursor: pointer;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
 /*---------------------
   Header
 -----------------------*/
@@ -334,6 +283,7 @@ ol {
   display: inline-block;
   margin-right: 30px;
   position: relative;
+	
 }
 
 .nav-menu ul li:last-child {
@@ -363,6 +313,7 @@ ol {
   padding: 32px 8px 30px;
   position: relative;
   font-family: "Quantico", sans-serif;
+	margin-bottom: 60px;
 }
 
 .nav-menu ul li a:after {
@@ -1807,6 +1758,7 @@ ol {
     background-color: #111;
     width: 20px;
     height: 3px;
+		
   }
   .slicknav_nav {
     background: #111;
